# dod

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/derisk/: wave0-kit.md
docs/map/: mutation-grading.md  system-truth-atlas.md
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/demo/: demo.js  index.html
frontend/src/: types.ts
frontend/src/app/: api.test.ts  api.ts  dod-app.test.ts  dod-app.ts  dod-detail.test.ts  dod-detail.ts  dod-list.test.ts  dod-list.ts  index.ts  main.ts  reorder.test.ts  reorder.ts  status.test.ts  status.ts  types.ts
frontend/src/dashkit/: actions.test.ts  atoms.test.ts  atoms.ts  charts.test.ts  charts.ts  dag-layout.test.ts  dag-layout.ts  dag-model.test.ts  dag-model.ts  dashkit.test.ts  dk-dag.test.ts  dk-dag.ts  dk-form.test.ts  dk-form.ts  dk-wordcloud.test.ts  dk-wordcloud.ts  format.ts  index.ts  theme.ts
kits/node/: dod-kit.js  example-counter.js
src/dod/: __init__.py  __main__.py  app.py  cli.py  config.py  daemon.py  discovery.py  kit.py  logsetup.py  models.py  plankit.py  planspec.py  ports.py  probe.py  registry.py  sampler.py  server.py  supervisor.py  util.py
src/dod/_examples/: registry.example.json
src/dod/providers/: __init__.py  base.py  manifest.py  pdd.py
src/dod/web/: app.css  app.js  dashkit.js  index.html
tests/: conftest.py  test_app.py  test_app_bind.py  test_discovery.py  test_init.py  test_kit_node.py  test_kit_roundtrip.py  test_logsetup.py  test_manifest_properties.py  test_planspec.py  test_ports.py  test_ports_properties.py  test_provider_manifest.py  test_provider_pdd.py  test_registry.py  test_server.py  test_supervisor.py  test_supervisor_properties.py
