[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dod"
version = "0.1.0"
description = "A dashboard of dashboards — one local supervisor that registers, launches, and frames every other local dashboard."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Tavor" }]
dependencies = []   # runtime is stdlib-only by design: an always-on daemon should have nothing to resolve at boot.

[project.scripts]
dod = "dod.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/dod"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["I"]
